# funny-things

./: .gitignore  CMakeLists.txt  README.md  _config.yml  authors.html  feed.xml  modules.html  tags.html
_drafts/: 2013-08-16-code-highlighting-post.md  2014-07-16-iCubWriter-has-been-improved.markdown  2014-11-20-internal-model-principle.md
_includes/: about.html  footer.html  head.html  header-home.html  header.html  image.html  js.html  latest-posts.html
_includes/css/: main.css
_layouts/: default.html  post-authors.html  post-index.html  post.html
_posts/: 2014-11-25-iCubBlinker.md  2014-11-26-iCubBreather.md
app/: CMakeLists.txt
app/conf/: emotions.ini  grasp_model.ini  homePoseChair.ini  iCubBlinker.ini  iCubBreather.ini  iCubWriter.ini  icub-look_pm.lua  r1-look_pm.lua
app/gesticulate/: CMakeLists.txt
app/greeting/: CMakeLists.txt
app/idleManager/: CMakeLists.txt
app/lua/: baricub.lua  gaze.lua  r1-look_pm.lua
app/scripts/: D_G_drawing.xml.template  baricub.lua  baricub.sh  baricub.xml.template  blinking-experiments.sh  dea-movements.xml  dea-movements.xml.template  dea-scripting.sh  funnyPostures.xml.template  iCubBreather.xml  icubDemoScript.xml.template  icubDemoScriptSIM.xml.template  italiaDigitale.xml.template  look-pixel.xml.template  msc.sh  msc.xml.template  pd-scripting.xml.template  president.xml.template  r1VideoScript.xml.template  r1_pwc-synthesize.xml.template  raffa_9_16.sh  rai-movements.xml  rai-scripting.sh  test.lua  tg2-scripting.xml.template  tim-scripting.sh  tim.xml.template  tobia-corto.xml.template  trento.xml.template
app/scripts/lua/: baricub.lua  gaze.lua  look-pixel.lua
app/scripts/shells/: ADP_demo.sh  D_G_drawing.sh  README.md  baricub.sh  blinking-experiments.sh  cittaragazzi-scripting.sh  corriereInnovazione.sh  dea-scripting.sh  enel.sh  ergoCubRome22.sh  igt-scripting.sh  interaction-scripting.sh  italiaDigitale.sh  mezzorainpiu.sh  pd-scripting.sh  president.sh  r1_pwc-synthesize.sh  r1_video.sh  r1interaction.sh  r1navigation.sh  rai-scripting.sh  rainews24.sh  rete4.sh  show-118.sh  tg2.sh  tim-scripting.sh  tobia-corto.sh  trento.sh  udine_danieli.sh  xMakers-scripting.sh
app/scripts/shells/old/: enel.sh  udine_danieli.sh
authors/: pattacini.html
doxygen/: generate.txt
doxygen/doc/html/: dir_168c181400fec304cc264e27f0466640.html  dir_2eaa63838c4470da3bc214ebca123b03.html  dir_b2138086760751ed5b6c2f534d2e016b.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_e2199ffcfb439558047501eb9fbf08f7.html  files.html  funnyPostures_2main_8cpp_source.html  group__icub__funnyPostures.html  group__icub__iCubBreather.html  group__icub__iCubWriter.html  iCubBlinker_2main_8cpp_source.html  iCubBreatherModule_8cpp_source.html  iCubBreatherThread_8cpp_source.html  iCubBreatherThread_8h_source.html  iCubWriter_2main_8cpp_source.html  index.html  menudata.js  modules.html  topics.html
doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  groups_0.js  groups_1.js  searchdata.js
doxygen/doc/latex/: dir_168c181400fec304cc264e27f0466640.tex  dir_2eaa63838c4470da3bc214ebca123b03.tex  dir_b2138086760751ed5b6c2f534d2e016b.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  dir_e2199ffcfb439558047501eb9fbf08f7.tex  files.tex  funnyPostures_2main_8cpp_source.tex  group__icub__funnyPostures.tex  group__icub__iCubBreather.tex  group__icub__iCubWriter.tex  iCubBlinker_2main_8cpp_source.tex  iCubBreatherModule_8cpp_source.tex  iCubBreatherThread_8cpp_source.tex  iCubBreatherThread_8h_source.tex  iCubWriter_2main_8cpp_source.tex  modules.tex  refman.tex  topics.tex
gui/iCubBarMenu/: iCubBarMenu.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
modules/: CMakeLists.txt
modules/funnyPostures/: CMakeLists.txt  main.cpp
modules/funnyThingsApp/: CMakeLists.txt  package.json  renderer.js
modules/funnyThingsApp/script/: funnythings.sh  funnythings_template.sh
modules/iCubBlinker/: CMakeLists.txt  iCubBlinker.cpp  iCubBlinker.thrift  iCubBlinker_thrift.cmake  main.cpp
modules/iCubBlinker/include/: iCubBlinker_IDL.h
modules/iCubBlinker/src/: iCubBlinker.cpp  iCubBlinker_IDL.cpp
modules/iCubBreather/: CMakeLists.txt  iCubBreatherModule.cpp  iCubBreatherThread.cpp  iCubBreatherThread.h
modules/iCubWriter/: CMakeLists.txt  main.cpp
